--- a/app/src/main/res/raw/okta_app_auth_config.json
+++ b/app/src/main/res/raw/okta_app_auth_config.json
@@ -7,5 +7,6 @@
     "profile",
     "offline_access"
   ],
-  "issuer_uri": "https://{yourOktaDomain}.com/oauth2/default"
+  "issuer_uri": "https://{yourOktaDomain}.com/oauth2/default",
+  "state": ""
 }
