Adding state param to config

--- a/app/src/main/res/raw/okta_app_auth_config.json
+++ b/app/src/main/res/raw/okta_app_auth_config.json
@@ -6,5 +6,6 @@
     "profile",
     "offline_access"
   ],
-  "issuer_uri": "{your-okta-org-uri-here}"
+  "issuer_uri": "{your-okta-org-uri-here}",
+  "state": ""
 }
