--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
 
 dependencies {
     implementation project(":library")
-    compile "com.android.support:appcompat-v7:${rootProject.appcompatVersion}"
-    compile "com.android.support:design:${rootProject.appcompatVersion}"
+    implementation "com.android.support:appcompat-v7:${rootProject.appcompatVersion}"
+    implementation "com.android.support:design:${rootProject.appcompatVersion}"
     implementation "com.github.bumptech.glide:glide:${rootProject.glideVersion}"
     implementation "com.squareup.okio:okio:${rootProject.okioVersion}"
     implementation "joda-time:joda-time:${rootProject.jodaTimeVersion}"
