--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,12 @@
         <activity
                 android:name=".LoginActivity"
                 android:label="@string/app_name_short"
+                android:launchMode="singleInstance"
                 android:windowSoftInputMode="stateHidden">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <data android:scheme="${appAuthRedirectScheme}"/>
@@ -42,7 +46,8 @@
         <activity android:name=".UserInfoActivity"
                   android:label="@string/app_name_short"
                   android:windowSoftInputMode="stateHidden"
-                  android:configChanges="keyboardHidden|orientation|screenSize"/>
+                  android:configChanges="keyboardHidden|orientation|screenSize">
+        </activity>
 
         <!-- AppAuth Activities -->
 
